<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MessageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_gray"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_back"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_contact"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                android:src="@drawable/circle_bg" />

            <TextView
                android:id="@+id/tv_name_atas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="User Name" />

            <!-- Ubah ID LinearLayout -->
            <LinearLayout
                android:id="@+id/toolbar_message_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_gray"
                android:theme="?attr/actionBarTheme"
                app:menu="@menu/message_menu">
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/ed_message"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="0dp"
        android:paddingHorizontal="10dp">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/tv_pesan"
            android:hint="@string/send_a_message"
            android:textColorHint="@color/white"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="10dp" />

<!--        <ImageView-->
<!--            android:id="@+id/cameraButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:enabled="false"-->
<!--            android:src="@drawable/ic_kamera"-->
<!--            android:layout_marginEnd="15dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            />-->

        <ImageView
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:src="@drawable/ic_sent" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="14dp"
        android:background="@android:color/white" />
</RelativeLayout>